--- a/identiity/Views/Account/Login.cshtml
+++ b/identiity/Views/Account/Login.cshtml
@@ -12,5 +12,6 @@
         <input asp-for="Password" class="form-control" />
     </div>
     <button class="btn btn-primary" type="submit">Login</button>
+    <a class="btn btn-info" asp-action="GoogleLogin" asp-route-returnUrl="@ViewBag.returnUrl">Login With Google</a>
 </form>
 
